Update Bookmark API
